Details
-
Bug
-
Status: Closed (View Workflow)
-
Major
-
Resolution: Fixed
-
10.0(EOL), 10.1(EOL), 10.2(EOL), 10.3(EOL), 10.4(EOL), 10.5(EOL), 10.6(EOL)
Description
The counter MONITOR_TRX_ACTIVE is not being updated consistently; see MySQL Bug #73114.
Furthermore, the count aims to include non-locking read-only transactions, which are otherwise mostly invisible to other threads, for performance reasons. The more interesting transactions can be found by reading information_schema.innodb_trx.
If it later turns out that a reliable count of active transactions is needed, it can be implemented via a different interface later.
Attachments
Issue Links
- relates to
-
MDEV-25689 metadata_table_reference_count, metadata_table_handles_closed are updated inconsistently; remove them
-
- Closed
-
-
MDEV-15706 Remove information_schema.innodb_metrics, innodb_monitor_enable, innodb_monitor_disable
-
- Open
-